test/error/iface/err2.rzy

Sub = Component
  inp : slot();
  out : signal();
    
composition
  inp -> out;
end

Err2 = Component
  inp : slot();
  out : signal();

composition
  a : Sub;
    
  inp -> a.inp;   // prevent error throwing
  a.out -> out;   // prevent error throwing
  
  a.inp -> out;   // ERROR connect sub-input to output
end

